# rapidbro

./: .dockerignore  .gitignore  docker-compose.deploy.yml  docker-compose.yml
.github/workflows/: deploy.yml
be/: Cargo.toml  Dockerfile
be/src/: main.rs
esp32/rapidbro/: rapidbro.ino
esp32/receiver/: receiver.ino
esp32/sender/: sender.ino
fe/: .cta.json  .env.example  Dockerfile  package.json  pnpm-lock.yaml
fe/src/: routeTree.gen.ts
fe/src/routes/: index.tsx  t789.tsx  test.tsx
rapid_kl_data/: frequencies.txt  shapes.txt  stops.txt  trips.txt
