[package]
name = "be"
version = "0.1.0"
edition = "2021"

[dependencies]
gtfs-realtime = "0.2.0"
reqwest = { version = "0.12", features = ["cookies"] }
prost = "0.14"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
rust_socketio = { version = "0.6", features = ["async"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
scraper = "0.22"
regex = "1.11"
futures-util = "0.3"
base64 = "0.22"
flate2 = "1.1"
axum = "0.8.8"
tower-http = { version = "0.6.8", features = ["cors"] }
cors = "0.1.0"
csv = "1.3"
chrono = { version = "0.4", features = ["serde"] }
